# RBDyn

./: .clang-format  .clang-format-common.sh  .envrc  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  FindOpenRTM.cmake  GNUInstallDirs.cmake  LICENSE  README.md  _config.yml  after_failure  after_success  appveyor.yml  base.cmake  before_install  boost.cmake  build  catkin.cmake  close_loop_measurement.csv  cmake_uninstall.cmake.in  common.sh  compile_commands.json  conanfile.py  config.hh.cmake  cpack.cmake  createshexe.cmake  debian.cmake  dist.cmake  distcheck.cmake  doxygen.cmake  eigen.cmake  filefilter.txt  flake.nix  geometric-tools.cmake  (+27 more)
.github/workflows/: RBDyn.recipe  build.yml  conan.yml  nix.yml  package.yml  update-flake-lock.yml
.gnupg/: pubring.gpg  secring.gpg
.travis/: README.md  after_failure  after_success  appveyor.yml.in  before_install  build  common.sh  functions.ps1  run  verbose_errors.sh
.travis/.gnupg/: trustdb.gpg
.travis/dependencies/: catkin  eigen-3.2  eigen-3.3  eigen-3.3.ps1  eigen-common.sh  ipopt  pybindgen-0.16
CMakeModules/: FindRBDyn_TinyXML2.cmake
binding/: CMakeLists.txt
binding/nanobind/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
binding/nanobind/docs/: api.rst  conf.py  index.rst
binding/nanobind/docs/source/: conf.py  index.rst
binding/nanobind/src/rbdyn/: __init__.py
binding/nanobind/src/rbdyn_module/: bind_MultiBodyConfig.cpp  rbdyn_module.cpp
binding/python/: CMakeLists.txt  __init__.py  generate.py  setup.in.py
binding/python/include/: rbdyn_parsers_wrapper.hpp  rbdyn_wrapper.hpp
binding/python/rbdyn/: __init__.py  c_rbdyn.pxd  c_rbdyn_private.pxd  rbdyn.pxd  rbdyn.pyx
binding/python/rbdyn/parsers/: __init__.py  c_parsers.pxd  c_parsers_private.pxd  parsers.pxd  parsers.pyx
binding/python/rbdyn_parsers/: __init__.py  c_rbdyn_parsers_private.pxd  rbdyn_parsers.pxd  rbdyn_parsers.pyx
binding/python/tests/: test_rbdyn_parsers.py  test_rbdyn_pickle.py
cmake/: .clang-format  Config.cmake.in  FindOpenRTM.cmake  GNUInstallDirs.cmake  README.md  apple.cmake  base.cmake  boost.cmake  cmake_uninstall.cmake.in  compile.py  compiler.cmake  config.h.cmake  config.hh.cmake  cxx11.cmake  deprecated.hh.cmake  dist.cmake  distcheck.cmake  doxygen.cmake  eigen.cmake  fix-license.sh  get-jrl-cmakemodules.cmake  get-sphinx-cmake.cmake  git-archive-all.py  gtest.cmake  header.cmake  hpp.cmake  ide.cmake  idl.cmake  lapack.cmake  msvc.vcxproj.user.in  openhrpcontroller.cmake  openrtm.cmake  package-config.cmake  pkg-config.cmake  python.cmake  release.cmake  ros.cmake  shared-library.cmake  swig.cmake  test.cmake  (+4 more)
cmake/doxygen/: Doxyfile.extra.in  Doxyfile.in  header-mathjax.html  header.html  style.rtf
cmake/github/: update-doxygen-doc.sh
cmake/gtest/: CMakeLists.txt.in
cmake/hpp/: doc.cmake
cmake/python/: FindPythonInterp.cmake
conan/: CMakeLists.txt  FindBoost.cmake
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp  test.py
debian/: changelog  control  copyright  librbdyn-dev.install  librbdyn-doc.doc-base  librbdyn-doc.lintian-overrides  librbdyn1.install  rules  source.lintian-overrides
dependencies/: catkin  eigen-3.2  eigen-3.2.ps1  ipopt  nag  nlopt  pagmo  pagmo.pc  pybindgen-0.16
doc/: Doxyfile.extra.in  JointIntegration.tex
doxygen/: Doxyfile.in  doxygen.css  header.tex  style.tex
doxygen/HEAD/: Body_8h.html  Body_8h.js  Body_8h__dep__incl.dot  Body_8h__dep__incl.md5  (+658 more)
dynamic_graph/: python-module-py.cc
github/: update-doxygen-doc.sh
image/: visp.cmake
log/: latest_build
python/: FindPythonLibs.cmake
scripts/: amelif_test.py  fall.py  gravity.py  hrp2_10.py  kinect.py  little_human.py  little_human_control.py  little_human_control_network.py  little_human_kinect.py  little_human_to_amelif.py  little_human_to_urdf.py  nethoap.py
src/: Body.h  CMakeLists.txt  CoM.cpp  CoM.h  Coriolis.cpp  EulerIntegration.cpp  EulerIntegration.h  FA.cpp  FA.h  FD.cpp  FD.h  FK.cpp  FK.h  FV.cpp  FV.h  Friction.cpp  ID.cpp  ID.h  IDIM.cpp  IDIM.h  IK.cpp  IK.h  IS.cpp  IS.h  IntegralTerm.cpp  Jacobian.cpp  Jacobian.h  Joint.h  Momentum.cpp  Momentum.h  MultiBody.cpp  MultiBody.h  MultiBodyConfig.cpp  MultiBodyConfig.h  MultiBodyGraph.cpp  MultiBodyGraph.h  NumericalIntegration.cpp  TorqueFeedbackTerm.cpp  VisServo.cpp  VisServo.h  (+4 more)
src/RBDyn/: Body.h  CMakeLists.txt  CoM.cpp  CoM.h  Coriolis.cpp  Coriolis.h  EulerIntegration.cpp  EulerIntegration.h  FA.cpp  FA.h  FD.cpp  FD.h  FK.cpp  FK.h  FV.cpp  FV.h  Friction.h  ID.cpp  ID.h  IDIM.cpp  IDIM.h  IK.cpp  IK.h  IS.cpp  IS.h  IntegralTerm.h  Jacobian.cpp  Jacobian.h  Joint.h  Momentum.cpp  Momentum.h  MultiBody.cpp  MultiBody.h  MultiBodyConfig.cpp  MultiBodyConfig.h  MultiBodyGraph.cpp  MultiBodyGraph.h  NumericalIntegration.cpp  NumericalIntegration.h  TorqueFeedbackTerm.cpp  (+7 more)
src/RBDyn/RBDyn/: Body.h  CoM.h  Coriolis.h  EulerIntegration.h  FA.h  FD.h  FK.h  FV.h  Friction.h  ID.h  IDIM.h  IK.h  IS.h  Jacobian.h  Joint.h  Momentum.h  MultiBody.h  MultiBodyConfig.h  MultiBodyGraph.h  NumericalIntegration.h  TorqueFeedbackTerm.h  VisServo.h  ZMP.h  util.hh
src/RBDyn/RBDyn/LambertW/: LambertW.h
src/install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/parsers/: CMakeLists.txt  common.cpp  to_urdf.cpp  to_yaml.cpp  urdf.cpp  urdf_yaml_conv.cpp  yaml.cpp  yaml_closed_loop.cpp
src/parsers/RBDyn/parsers/: api.h  common.h  urdf.h  yaml.h  yaml_closed_loop.h
tests/: AlgoTest.cpp  BodyTest.cpp  CMakeLists.txt  CoMTest.cpp  CoriolisTest.cpp  DynamicsBench.cpp  DynamicsTest.cpp  ExpandTest.cpp  IDIMTest.cpp  IntegrationTest.cpp  InverseStaticsTest.cpp  InverseStaticsTest.stdout  JacobianBench.cpp  JacobianTest.cpp  JointTest.cpp  MomentumTest.cpp  MultiBodyTest.cpp  ParsersTestUtils.h  SSSarm.h  Tree30Dof.h  URDFOutputTest.cpp  URDFParserTest.cpp  XXXarm.h  XXXdualarm.h  XYZSarm.h  XYZarm.h  YAMLOutputTest.cpp  YAMLParserTest.cpp  fixture.hh  rbd_pickle_test.py
(+730 files in other folders)
