[build-system]
# We require numpy <= 2.1 since numpy 2.2 introduces typing regressions
# In particular this causes typing issues with ArrayLike expressions (eigen matrices)
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "nanobind-stubgen >= 0.1.5", "numpy <= 2.1", "typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "rbdyn"
version = "2.12.0"
description = "Python bindings for the rbdyn robotics library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Arnaud TANGUY", email = "arn.tanguy@gmail.com" },
]
classifiers = [
    "License :: BSD",
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://jrl.cnrs.fr/rbdyn/"
Repository = "https://github.com/jrl-umi3218/rbdyn"
Documentation = "https://jrl.cnrs.fr/rbdyn/"
Issues = "https://github.com/jrl-umi3218/rbdyn/issues"
Changelog = "https://github.com/jrl-umi3218/rbdyn/releases/tag/v2.12.0"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
